project-registry-devops/k8s/prerequisites/consul.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul
spec:
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
      - name: consul
        image: 'consul:latest'
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
        ports:
        - containerPort: 8500

---

apiVersion: v1
kind: Service
metadata:
  name: consul
spec:
  type: NodePort
  selector:
    app: consul
  ports:
  - port: 8500
    targetPort: 8500
