project-registry-devops/k8s/prerequisites/istio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: ingress
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 4200
  rules:
  - host: "*.registry.matthewcradit.com"
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 8085
  - host: "*.registry.matthewcradit.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 4200
